# ferrite

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ADOPTERS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile.migrate  FIRST_CONTRIBUTORS.md  GOVERNANCE.md  Makefile  README.ja-JP.md  README.ko-KR.md  README.md  README.zh-CN.md  REFACTORING.md  RELEASE_CHECKLIST.md  ROADMAP.md  codecov.yml  deny.toml  flake.nix  release.toml  rust-toolchain.toml
crates/ferrite-ai/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrite-ai/src/: lib.rs
crates/ferrite-ai/src/agent_memory/: decay.rs  episodic.rs  feature_store.rs  mcp.rs  mod.rs  procedural.rs  semantic_memory.rs  sharing.rs  store.rs  working.rs
crates/ferrite-ai/src/conversation/: memory.rs  message.rs  mod.rs  session.rs  summarizer.rs  window.rs
crates/ferrite-ai/src/embedding/: byoe.rs  catalog.rs  mod.rs  pipeline.rs
crates/ferrite-ai/src/graphrag/: entity.rs  graph.rs  mod.rs  retriever.rs
crates/ferrite-ai/src/hybrid/: fusion.rs  mod.rs  multi_vector.rs  reranker.rs
crates/ferrite-ai/src/inference/: batch.rs  cache.rs  engine.rs  mod.rs  model.rs  trigger.rs
crates/ferrite-ai/src/rag/: chunk.rs  chunking.rs  context.rs  document.rs  embed.rs  mod.rs  orchestrate.rs  pipeline.rs  rerank.rs  retrieve.rs  source_sync.rs
crates/ferrite-ai/src/semantic/: async_embeddings.rs  cache.rs  embeddings.rs  function_cache.rs  ga_cache.rs  hnsw.rs  llm_cache.rs  metrics.rs  mod.rs  resilience.rs  semantic_cache.rs  streaming.rs
crates/ferrite-ai/src/vector/: distance.rs  filter.rs  flat.rs  hnsw.rs  incremental.rs  ivf.rs  mod.rs  persistence.rs  quantization.rs  search.rs  store.rs  types.rs
crates/ferrite-cloud/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrite-cloud/src/: lib.rs
crates/ferrite-cloud/src/cloud/: api_gateway.rs  billing.rs  control_plane.rs  deploy_sdk.rs  metering.rs  mod.rs  provisioning.rs  sla_monitor.rs  tenant.rs  terraform.rs
crates/ferrite-cloud/src/costoptimizer/: budget.rs  executor.rs  mod.rs  model.rs  planner.rs  strategy.rs
crates/ferrite-cloud/src/edge/: delta_sync.rs  mesh.rs  mod.rs  offline_sync.rs  resource_monitor.rs  sync_protocol.rs
crates/ferrite-cloud/src/managed/: billing.rs  mod.rs  predictive.rs  provisioner.rs  scaling.rs
crates/ferrite-cloud/src/multicloud/: active_active.rs  consistency.rs  health.rs  hlc.rs  mod.rs  provider.rs  region.rs  replication_protocol.rs  routing.rs  sync.rs
crates/ferrite-cloud/src/s3/: auth.rs  bucket.rs  mod.rs  object.rs  request.rs  response.rs
crates/ferrite-cloud/src/serverless/: connection_pool.rs  deployment.rs  edge.rs  mod.rs  runtime.rs  scheduler.rs  triggers.rs  wasi_adapter.rs
crates/ferrite-core/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrite-core/src/: config.rs  error.rs  lib.rs  startup_errors.rs  validation.rs
crates/ferrite-core/src/audit/: classifier.rs  compliance.rs  contracts.rs  lineage.rs  logger.rs  mod.rs
crates/ferrite-core/src/auth/: acl.rs  mod.rs  policy_engine.rs  user.rs
crates/ferrite-core/src/cluster/: auto_reshard.rs  cluster_bus.rs  cluster_metrics.rs  consensus_api.rs  distributed_lock.rs  failover.rs  gossip.rs  health.rs  migration.rs  mod.rs  raft.rs  raft_log.rs  resharding.rs  rolling_upgrade.rs  routing.rs  slots.rs  split_brain.rs  state_manager.rs  wire_compat.rs
crates/ferrite-core/src/compatibility/: certification.rs  compat_tracker.rs  dashboard.rs  mod.rs  report.rs  suite.rs  tcl_compat.rs  tracker.rs  trend.rs
crates/ferrite-core/src/crypto/: key.rs  mod.rs
crates/ferrite-core/src/embedded/: database.rs  edge.rs  edge_db.rs  error.rs  ffi.rs  iot.rs  iterators.rs  lite.rs  mesh.rs  mobile_sdk.rs  mod.rs  sync.rs  transaction.rs  wasm_adapter.rs
crates/ferrite-core/src/gateway/: auth_middleware.rs  graphql_engine.rs  mod.rs  rest_router.rs  server.rs
crates/ferrite-core/src/graphql/: mod.rs  resolver.rs  schema.rs
crates/ferrite-core/src/grpc/: mod.rs  (+2 more)
crates/ferrite-core/tests/: ferriteql_integration.rs  proptest_hybridlog.rs
crates/ferrite-document/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrite-document/src/: lib.rs
crates/ferrite-graph/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrite-graph/src/: lib.rs
crates/ferrite-k8s/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrite-k8s/manifests/: example-cluster.yaml  ferritecluster-crd.yaml
crates/ferrite-k8s/src/: lib.rs
crates/ferrite-plugins/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrite-plugins/src/: lib.rs  sdk.rs
crates/ferrite-streaming/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrite-streaming/src/: lib.rs
crates/ferrite-studio/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrite-studio/src/: lib.rs
crates/ferrite-timeseries/: CHANGELOG.md  Cargo.toml  README.md
crates/ferrite-timeseries/src/: lib.rs
examples/wasm_udf/: Cargo.toml
examples/wasm_udf/json_transform/: Cargo.toml  README.md  manifest.toml
examples/wasm_udf/src/: lib.rs
examples/wasm_udf/validate_email/: Cargo.toml  README.md  manifest.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_command_parser.rs  fuzz_config_parser.rs  fuzz_gossip_message.rs  fuzz_resp_parser.rs  fuzz_resp_roundtrip.rs  fuzz_wal_record.rs
sdk/ferrite-py/: README.md  pyproject.toml
sdk/ferrite-py/ferrite/: __init__.py  client.py  vector.py
sdk/ferrite-py/tests/: test_client.py
sdk/ferrite-rs/: Cargo.toml  README.md
sdk/ferrite-rs/examples/: basic.rs
sdk/ferrite-rs/src/: async_client.rs  client.rs  connection.rs  error.rs  lib.rs  pool.rs  resp.rs  types.rs
sdk/python/: AI_SDK_README.md  README.md  pyproject.toml  setup.py
sdk/python/examples/: basic_caching.py  langchain_integration.py  openai_caching.py
sdk/python/ferrite/: __init__.py  client.py  exceptions.py
sdk/python/ferrite_ai/: __init__.py  client.py  langchain.py  llamaindex.py  openai_wrapper.py
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: basic_usage.rs
sdk/rust/src/: commands.rs  error.rs  lib.rs
(+852 files in other folders)
