[package]
name = "ferrite-cloud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Cloud storage integration (S3/GCS/Azure) for Ferrite"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["cloud", "s3", "storage", "serverless", "ferrite"]
categories = ["database", "filesystem"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
rand.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
base64.workspace = true
flate2.workspace = true
object_store = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
