[package]
name = "ferrite-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core engine for Ferrite — storage, protocol, commands, clustering"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["redis", "cache", "key-value", "database", "storage"]
categories = ["database", "caching"]

[lib]
doctest = true

[lints.rust]
missing_docs = "warn"
private_interfaces = "allow"
rust_2018_idioms = "allow"
dead_code = "warn"
unused_imports = "warn"
unused_variables = "warn"
unused_mut = "warn"
unused_assignments = "warn"
unused_must_use = "warn"
unused_macros = "allow"

[lints.clippy]
uninlined_format_args = "allow"
unwrap_used = "deny"

[dependencies]
tokio.workspace = true
bytes.workspace = true
dashmap.workspace = true
crossbeam.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
bincode.workspace = true
parking_lot.workspace = true
memmap2.workspace = true
rand.workspace = true
regex.workspace = true
log.workspace = true
ordered-float.workspace = true
crc32fast.workspace = true
flate2.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
humantime.workspace = true
base64.workspace = true
lz4_flex.workspace = true
urlencoding.workspace = true
uuid.workspace = true
num_cpus.workspace = true
scopeguard.workspace = true
clap.workspace = true

# Optional deps
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
mlua = { workspace = true, optional = true }
object_store = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# OpenTelemetry (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }
nix = { version = "0.29", features = ["uio"] }

[features]
default = ["scripting", "tls", "crypto"]
tls = ["rustls", "tokio-rustls", "rustls-pemfile"]
crypto = ["argon2", "chacha20poly1305"]
scripting = ["mlua"]
cloud = ["object_store", "reqwest"]
io-uring = ["tokio-uring"]
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry", "opentelemetry-semantic-conventions"]
experimental = []

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
proptest.workspace = true
