[package]
name = "ferrite-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Graph data model and traversal operations for Ferrite"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["graph", "database", "traversal", "cypher", "ferrite"]
categories = ["database", "data-structures"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
rand.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
ordered-float.workspace = true


[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
