[package]
name = "ferrite-plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Plugin system, WASM runtime, and CRDTs for Ferrite"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["plugin", "wasm", "crdt", "extensible", "ferrite"]
categories = ["database", "wasm"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
rand.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
base64.workspace = true
num_cpus.workspace = true
scopeguard.workspace = true
toml.workspace = true
reqwest = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }

[features]
default = []
wasm = ["wasmtime"]
marketplace = ["reqwest"]

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
