[package]
name = "ferrite-streaming"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Event streaming, CDC, and data pipelines for Ferrite"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["streaming", "cdc", "events", "pipeline", "ferrite"]
categories = ["database", "asynchronous"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
rand.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
base64.workspace = true
crc32fast.workspace = true
lz4_flex.workspace = true
urlencoding.workspace = true
metrics.workspace = true
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
