[package]
name = "ferrite-studio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Web-based management UI and interactive playground for Ferrite"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dashboard", "ui", "playground", "ferrite"]
categories = ["database", "web-programming"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
rand.workspace = true
uuid.workspace = true
parking_lot.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
urlencoding.workspace = true


[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
