[package]
name = "ferrite-timeseries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Time-series data ingestion and downsampling for Ferrite"
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["timeseries", "metrics", "downsampling", "iot", "ferrite"]
categories = ["database"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono.workspace = true
rand.workspace = true
uuid.workspace = true
parking_lot.workspace = true
ordered-float.workspace = true
dashmap.workspace = true
regex.workspace = true


[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
