[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ferrite-py"
version = "0.1.0"
description = "Python SDK for Ferrite — Redis-compatible tiered-storage key-value store"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "FerriteLabs" }]
keywords = ["ferrite", "redis", "key-value", "vector", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = ["redis>=5.0"]

[project.optional-dependencies]
ai = ["langchain-core>=0.2"]

[tool.hatch.build.targets.wheel]
packages = ["ferrite"]

[project.urls]
Homepage = "https://github.com/FerriteLabs/ferrite"
Documentation = "https://ferritedb.io"
Repository = "https://github.com/FerriteLabs/ferrite"
Issues = "https://github.com/FerriteLabs/ferrite/issues"
