[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ferrite-py"
version = "0.1.0"
description = "Official Python client for Ferrite key-value store"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Ferrite Labs", email = "hello@ferritelabs.dev"},
]
keywords = ["ferrite", "redis", "database", "key-value", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "redis>=5.0.0",
]

[project.optional-dependencies]
async = ["redis[hiredis]>=5.0.0"]
ai = ["ferrite-ai"]
langchain = ["langchain-core>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
openai = ["openai>=1.0.0"]
embeddings = ["numpy>=1.24.0"]
test = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-mock>=3.10"]
all = ["redis[hiredis]>=5.0.0", "langchain-core>=0.1.0", "openai>=1.0.0", "numpy>=1.24.0"]

[project.urls]
Homepage = "https://github.com/ferritelabs/ferrite"
Documentation = "https://docs.ferritelabs.dev/sdk/python"
Repository = "https://github.com/ferritelabs/ferrite"
Issues = "https://github.com/ferritelabs/ferrite/issues"

[tool.setuptools.packages.find]
include = ["ferrite*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
